--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,8 @@ button {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -82,12 +84,27 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.nav-link.current,
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
 }
+.nav-link.current {
+  position: relative;
+}
 
+.nav-link.current::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: #404bbf;
+}
 .contacts {
   margin-left: auto;
   font-style: normal;
@@ -106,6 +123,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-link:hover,
 .contacts-link:focus {
@@ -115,8 +133,17 @@ button {
 
 /* #region hero */
 .page-hero {
+  margin: 0 auto;
+  max-width: 1440px;
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background-img/people-office.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .hero-title {
   font-weight: 700;
@@ -142,6 +169,7 @@ button {
   min-width: 169px;
   margin: 48px auto 0;
   display: block;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -176,6 +204,18 @@ button {
 .benefits-item {
   width: calc((100% - 72px) / 4);
 }
+.benefits-icon-container {
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  max-width: 264px;
+  text-align: center;
+  padding: 24px 0;
+  background-color: #f4f4fd;
+  margin-bottom: 8px;
+}
+
+.benefits-icon {
+}
 .benefits-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -190,6 +230,7 @@ button {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
 /* #endregion benefits */
 
 /* #region Our Team */
@@ -215,6 +256,8 @@ button {
   background: #fff;
   width: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .team-img {
 }
@@ -235,6 +278,34 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+.team-list-icon {
+  margin-top: 8px;
+  display: flex;
+  gap: 24px;
+  padding: 0;
+  justify-content: center;
+}
+
+.team-item-icon {
+  width: 40px;
+  height: 40px;
+}
+.team-icon-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icon-link:hover {
+  background-color: #404bbf;
+}
+.team-icon {
+  fill: #f4f4fd;
 }
 /* #endregion Our Team */
 
@@ -261,7 +332,38 @@ button {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  cursor: pointer;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.portfolio-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.portfolio-item:hover .portfolio-overlay {
+  opacity: 1;
+  transform: translateY(0);
+}
+.portfolio-item-block {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 40px;
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-img {
 }
 .portfolio-content {
@@ -290,6 +392,9 @@ button {
   background-color: #2e2f42;
   padding: 100px 0;
 }
+.footer-main-container {
+  display: flex;
+}
 
 .footer-logo .logo-part {
   color: #f4f4fd;
@@ -304,4 +409,42 @@ button {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+.footer-logo-container {
+}
+.footer-social-container {
+  margin-left: 120px;
+}
+.futer-text-social {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-list-social {
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  justify-content: center;
+}
+.footer-item-social {
+  width: 40px;
+  height: 40px;
+}
+.footer-link-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-link-social:hover {
+  background-color: #31d0aa;
+}
+.footer-social-icon {
+  fill: #f4f4fd;
 }
