--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ button {
     url(../images/background-img/people-office.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 .hero-title {
   font-weight: 700;
@@ -169,12 +170,12 @@ button {
   min-width: 169px;
   margin: 48px auto 0;
   display: block;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 /* #endregion hero */
 
@@ -205,6 +206,10 @@ button {
   width: calc((100% - 72px) / 4);
 }
 .benefits-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   max-width: 264px;
@@ -297,11 +302,12 @@ button {
   justify-content: center;
   width: 100%;
   height: 100%;
-  border-radius: 50px;
+  border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-icon-link:hover {
+.team-icon-link:hover,
+.team-icon-link:focus {
   background-color: #404bbf;
 }
 .team-icon {
@@ -349,19 +355,19 @@ button {
 }
 .portfolio-overlay {
   position: absolute;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
   color: #f4f4fd;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 40px;
+  padding: 40px 32px;
   transform: translateY(100%);
   opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img {
@@ -394,6 +400,7 @@ button {
 }
 .footer-main-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-logo .logo-part {
@@ -411,11 +418,12 @@ button {
   max-width: 264px;
 }
 .footer-logo-container {
+  margin-right: 120px;
 }
 .footer-social-container {
-  margin-left: 120px;
 }
 .futer-text-social {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -438,10 +446,11 @@ button {
   justify-content: center;
   width: 100%;
   height: 100%;
-  border-radius: 50px;
+  border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.footer-link-social:focus,
 .footer-link-social:hover {
   background-color: #31d0aa;
 }
