--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ button {
   padding: 40px 32px;
   transform: translateY(100%);
   opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img {
